--- a/index.html
+++ b/index.html
@@ -1,306 +1,57 @@
 <!doctype html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="color-scheme" content="dark light" />
+  <meta charset="utf-8">
+  <title>Speedreader – ORP RSVP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Minimaler Speedreader mit ORP-Fixierung. Text einfügen, WPM einstellen und fokussiert lesen.">
+  <meta name="robots" content="index,follow">
 
-  <title>Bionic Reading & Speedreader (ORP/Spritz) – Text & PDF lokal</title>
-  <meta name="description" content="Bionic Reading & Spritz-Style Speedreader (ORP): Text einfügen oder PDF laden und lokal im Browser lesen. Ohne Server-Upload." />
-  <link rel="canonical" href="https://4rjn.github.io/bionicreading/" />
-  <meta name="robots" content="index,follow,max-image-preview:large" />
-
-  <!-- OpenGraph / Social -->
-  <meta property="og:site_name" content="Bionic Reading Tool" />
-  <meta property="og:title" content="Bionic Reading & Speedreader (ORP/Spritz)" />
-  <meta property="og:description" content="Text oder PDF → Bionic Reading oder Spritz-Style Speedreading (ORP) direkt im Browser. 100% lokal." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://4rjn.github.io/bionicreading/" />
-  <meta property="og:image" content="https://4rjn.github.io/bionicreading/assets/og.svg" />
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- PWA-ish -->
-  <link rel="manifest" href="./site.webmanifest" />
-  <link rel="icon" href="./assets/favicon.svg" type="image/svg+xml" />
-
-  <link rel="stylesheet" href="./assets/app.css" />
-
-  <!-- PDF.js (Client-side PDF Text Extraction) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.7.76/pdf.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
-  <header class="topbar">
-    <div class="wrap">
-      <a class="brand" href="./" aria-label="Startseite">
-        <span class="logo" aria-hidden="true">BR</span>
-        <span class="brand-text">
-          <strong>Bionic Reading</strong>
-          <span class="muted">+ ORP Speedreader (Spritz Style)</span>
-        </span>
-      </a>
+  <main class="container">
 
-      <nav class="nav">
-        <a href="#tool">Tool</a>
-        <a href="#faq">FAQ</a>
-        <a href="#privacy">Datenschutz</a>
-        <a class="pill" href="https://github.com/4rjn/bionicreading" target="_blank" rel="noreferrer">GitHub</a>
-      </nav>
-    </div>
-  </header>
+    <h1>Speedreader</h1>
+    <p class="subtitle">RSVP mit ORP-Fixierung</p>
 
-  <main class="wrap">
-    <section class="hero">
-      <div class="hero-left">
-        <h1>Wie im Video: <span class="grad">ORP</span> in der Wortmitte + 300 WPM.</h1>
-        <p class="lead">
-          Wähle: <strong>Bionic Reading</strong> (Wortanfang markiert) oder <strong>Speedreader</strong> (RSVP/Spritz-Style mit <strong>ORP</strong> – ein Buchstabe in der Mitte rot).
-          Text einfügen oder PDF hochladen – <strong>alles läuft lokal</strong> im Browser.
-        </p>
+    <!-- 1) Text Input -->
+    <section class="panel">
+      <h2>1) Text eingeben</h2>
+      <textarea id="input" placeholder="Text hier einfügen…"></textarea>
+    </section>
 
-        <div class="hero-actions">
-          <a class="btn primary" href="#tool">Jetzt starten</a>
-          <button class="btn ghost" id="btn-demo" type="button">Demo einfügen</button>
-        </div>
+    <!-- 2) Controls -->
+    <section class="panel">
+      <h2>2) Einstellungen</h2>
 
-        <div class="badges">
-          <span class="badge">100% Client-Side</span>
-          <span class="badge">Text & PDF</span>
-          <span class="badge">Bionic + Spritz/ORP</span>
-        </div>
+      <label>
+        Wörter pro Minute:
+        <span id="wpmValue">300</span>
+      </label>
+      <input type="range" id="wpm" min="100" max="1000" step="50" value="300">
+
+      <div class="buttons">
+        <button id="start">Start</button>
+        <button id="pause">Pause</button>
+        <button id="stop">Stop</button>
       </div>
+    </section>
 
-      <div class="hero-card">
-        <div class="mini-title">Speedreader Vorschau (ORP fix)</div>
-        <div class="spritz preview" aria-hidden="true">
-          <div class="spritz-line">
-            <span class="spritz-left">mi</span><span class="spritz-pivot br-red">n</span><span class="spritz-right">ute</span>
-          </div>
-          <div class="spritz-meta muted">300 wpm · ORP (Optimal Recognition Point)</div>
+    <!-- 3) Output -->
+    <section class="panel">
+      <h2>3) Speedreader Output</h2>
+
+      <div class="reader">
+        <div class="word" id="word">
+          <span class="left"></span><span class="orp"></span><span class="right"></span>
         </div>
       </div>
     </section>
 
-    <section id="tool" class="panel">
-      <div class="panel-head">
-        <h2>Tool</h2>
-        <p class="muted">Input wählen → Modus wählen → lesen.</p>
-      </div>
-
-      <div class="card">
-        <div class="card-head">
-          <h3>1) Input</h3>
-          <p class="muted">Text einfügen oder PDF hochladen</p>
-        </div>
-
-        <div class="tabs" role="tablist" aria-label="Eingabe wählen">
-          <button class="tab active" id="tab-text" type="button" role="tab" aria-selected="true">Text</button>
-          <button class="tab" id="tab-pdf" type="button" role="tab" aria-selected="false">PDF</button>
-        </div>
-
-        <div id="pane-text" class="pane">
-          <label class="label" for="inputText">Text einfügen</label>
-          <textarea id="inputText" class="textarea" placeholder="Kopiere hier deinen Text rein…"></textarea>
-
-          <div class="row">
-            <button class="btn primary" id="btn-load-text" type="button">Text übernehmen</button>
-            <button class="btn" id="btn-clear" type="button">Leeren</button>
-          </div>
-          <div class="hint">Der Text wird nur in deinem Browser verarbeitet.</div>
-        </div>
-
-        <div id="pane-pdf" class="pane hidden">
-          <label class="label" for="pdfFile">PDF hochladen</label>
-          <input id="pdfFile" class="file" type="file" accept="application/pdf" />
-
-          <div class="row">
-            <button class="btn primary" id="btn-load-pdf" type="button">PDF lesen (lokal)</button>
-            <button class="btn" id="btn-pdf-reset" type="button">Reset</button>
-          </div>
-
-          <div class="progress hidden" id="pdfProgress">
-            <div class="bar" id="pdfBar" style="width:0%"></div>
-            <div class="muted" id="pdfStatus">Bereit.</div>
-          </div>
-
-          <div class="hint">Hinweis: Manche PDFs enthalten nur Bilder – dann kommt wenig Text raus (OCR nötig).</div>
-        </div>
-      </div>
-
-      <div class="grid mt">
-        <div class="card">
-          <div class="card-head">
-            <h3>2A) Bionic Reading (Absatz)</h3>
-            <p class="muted">Markiert einen Anteil pro Wort</p>
-          </div>
-
-          <div class="controls">
-            <div class="control">
-              <label class="label" for="intensity">Intensität (Anteil pro Wort)</label>
-              <input id="intensity" type="range" min="10" max="70" step="5" value="35" />
-              <div class="muted small">Aktuell: <span id="intensityVal">35%</span></div>
-            </div>
-
-            <div class="control">
-              <label class="label" for="markStyle">Markierung</label>
-              <select id="markStyle" class="select">
-                <option value="red" selected>Rot + fett</option>
-                <option value="bold">Nur fett</option>
-                <option value="underline">Unterstrichen</option>
-              </select>
-            </div>
-
-            <div class="row">
-              <button class="btn primary" id="btn-bionic" type="button">Bionic anzeigen</button>
-              <button class="btn" id="btn-export" type="button">HTML export</button>
-            </div>
-
-            <div class="hint">Export speichert Markierungen als HTML-Datei.</div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-head">
-            <h3>2B) Speedreader (ORP/Spritz)</h3>
-            <p class="muted">Wie im Video: ein Fixier-Buchstabe in der Mitte</p>
-          </div>
-
-          <div class="controls">
-            <div class="control">
-              <label class="label" for="wpm">WPM</label>
-              <input id="wpm" type="range" min="120" max="900" step="10" value="300" />
-              <div class="muted small">Aktuell: <span id="wpmVal">300</span> wpm</div>
-            </div>
-
-            <div class="control">
-              <label class="label" for="orpMode">ORP-Regel</label>
-              <select id="orpMode" class="select">
-                <option value="spritz" selected>Spritz-ähnlich (empfohlen)</option>
-                <option value="middle">Genau Mitte (einfach)</option>
-              </select>
-            </div>
-
-            <div class="row">
-              <button class="btn primary" id="btn-play" type="button">▶ Start</button>
-              <button class="btn" id="btn-pause" type="button" disabled>⏸ Pause</button>
-              <button class="btn" id="btn-stop" type="button" disabled>⏹ Stop</button>
-            </div>
-
-            <div class="row">
-              <button class="btn" id="btn-back" type="button" disabled>⟵ 10</button>
-              <button class="btn" id="btn-forward" type="button" disabled>10 ⟶</button>
-            </div>
-
-            <div class="hint">Tipp: Bei Satzende wird automatisch minimal länger pausiert.</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="grid mt">
-        <div class="card">
-          <div class="card-head">
-            <h3>3A) Bionic Output</h3>
-            <p class="muted">Absatzansicht</p>
-          </div>
-          <div class="output-toolbar">
-            <span class="pill small" id="stats">0 Wörter</span>
-            <span class="pill small" id="status">Bereit.</span>
-          </div>
-          <article id="bionicOut" class="reader" aria-live="polite">
-            <p class="muted">Text laden → „Bionic anzeigen“.</p>
-          </article>
-        </div>
-
-        <div class="card">
-          <div class="card-head">
-            <h3>3B) Speedreader Output</h3>
-            <p class="muted">RSVP mit ORP-Fixierung</p>
-          </div>
-
-          <div class="spritz-box" aria-live="polite" aria-label="Speedreader Anzeige">
-            <div class="spritz-line" id="spritzLine">
-              <span class="spritz-left" id="spritzLeft"></span>
-              <span class="spritz-pivot br-red" id="spritzPivot"></span>
-              <span class="spritz-right" id="spritzRight"></span>
-            </div>
-            <div class="spritz-hud">
-              <span class="pill small" id="spritzPos">0/0</span>
-              <span class="pill small" id="spritzInfo">300 wpm</span>
-            </div>
-            <div class="spritz-sub muted" id="spritzSub">Bereit.</div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <section id="faq" class="panel">
-      <div class="panel-head">
-        <h2>FAQ</h2>
-        <p class="muted">Was du wahrscheinlich wissen willst</p>
-      </div>
-
-      <div class="faq">
-        <details>
-          <summary>Was ist ORP / Spritz-Style?</summary>
-          <div class="content">
-            ORP steht für „Optimal Recognition Point“. Beim Speedreading wird ein Buchstabe pro Wort (oft rot) an einer Position markiert,
-            die das Erkennen erleichtert. Zusätzlich bleibt der ORP-Buchstabe immer an derselben Stelle, damit die Augen nicht springen.
-          </div>
-        </details>
-
-        <details>
-          <summary>Was ist der Unterschied zu Bionic Reading?</summary>
-          <div class="content">
-            Bionic Reading markiert typischerweise den Wortanfang (einen Anteil des Wortes) innerhalb normaler Absätze.
-            Der Spritz/ORP-Speedreader zeigt Wörter nacheinander (RSVP) und markiert einen Fixierpunkt in der Wortmitte.
-          </div>
-        </details>
-
-        <details>
-          <summary>Werden meine Daten hochgeladen?</summary>
-          <div class="content">
-            Nein. Text & PDF werden lokal im Browser verarbeitet. Es gibt keinen Server-Upload.
-          </div>
-        </details>
-      </div>
-    </section>
-
-    <section id="privacy" class="panel">
-      <div class="panel-head">
-        <h2>Datenschutz</h2>
-        <p class="muted">Client-Side by Design</p>
-      </div>
-
-      <div class="card">
-        <p>
-          Diese Seite verarbeitet Inhalte <strong>nur lokal</strong> im Browser.
-          Es werden keine Texte oder PDFs an einen Server übertragen.
-        </p>
-        <p class="muted small">
-          PDF.js wird aktuell über ein CDN geladen. Wenn du 100% offline willst, kannst du PDF.js lokal ins Repo legen.
-        </p>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <div class="muted small">© <span id="year"></span> · 4rjn.github.io/bionicreading</div>
-    </footer>
   </main>
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"WebApplication",
-    "name":"Bionic Reading & ORP Speedreader",
-    "url":"https://4rjn.github.io/bionicreading/",
-    "applicationCategory":"UtilitiesApplication",
-    "operatingSystem":"Web",
-    "description":"Text oder PDF lokal in Bionic Reading oder Spritz-Style ORP-Speedreading umwandeln – ohne Server-Upload."
-  }
-  </script>
-
-  <script src="./assets/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
