--- a/index.html
+++ b/index.html
@@ -7,76 +7,93 @@
 
   <title>Speedreader (ORP) – RSVP</title>
   <meta name="description" content="Speedreader mit ORP-Fixierung (RSVP): Text einfügen, WPM einstellen und fokussiert lesen. Alles läuft lokal im Browser." />
-  <link rel="canonical" href="https://4rjn.github.io/bionicr/" />
+  <link rel="canonical" href="https://4rjn.github.io/bionicreading/" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
 
+  <!-- OpenGraph -->
   <meta property="og:site_name" content="Speedreader (ORP)" />
   <meta property="og:title" content="Speedreader (ORP) – RSVP" />
   <meta property="og:description" content="Text einfügen → WPM einstellen → RSVP lesen. ORP-Fixierung hält den Fokus stabil." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://4rjn.github.io/bionicr/" />
-  <meta property="og:image" content="https://4rjn.github.io/bionicr/assets/og.png" />
+  <meta property="og:url" content="https://4rjn.github.io/bionicreading/" />
+  <meta property="og:image" content="https://4rjn.github.io/bionicreading/assets/og.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="manifest" href="./site.webmanifest" />
   <link rel="icon" href="./assets/favicon.svg" type="image/svg+xml" />
 
-  <!-- WICHTIG: cache-bust, damit das alte CSS wirklich geladen wird -->
-  <link rel="stylesheet" href="./assets/app.css?v=20260118-1" />
+  <!-- Cache-bust -->
+  <link rel="stylesheet" href="./assets/app.css?v=20260118-3" />
 </head>
 
 <body>
+  <!-- Modern Topbar -->
   <header class="topbar">
-    <div class="wrap">
+    <div class="wrap topbar-inner">
       <a class="brand" href="./" aria-label="Startseite">
         <span class="logo" aria-hidden="true">SR</span>
         <span class="brand-text">
           <strong>Speedreader</strong>
-          <span class="muted">RSVP mit ORP-Fixierung</span>
+          <span class="muted">RSVP · ORP-Fixierung</span>
         </span>
       </a>
 
-      <nav class="nav">
-        <a href="#tool">Tool</a>
-        <a href="#faq">FAQ</a>
-        <a href="#privacy">Datenschutz</a>
-        <a class="pill" href="https://github.com/4rjn/bionicr" target="_blank" rel="noreferrer">GitHub</a>
+      <nav class="nav nav-modern">
+        <a class="navlink" href="#tool">Tool</a>
+        <a class="navlink" href="#faq">FAQ</a>
+        <a class="navlink" href="#privacy">Datenschutz</a>
+        <a class="pill pill-cta" href="https://github.com/4rjn/bionicreading" target="_blank" rel="noreferrer">GitHub</a>
       </nav>
     </div>
   </header>
 
   <main class="wrap">
-    <section class="hero">
+    <!-- Modern Hero -->
+    <section class="hero hero-modern">
       <div class="hero-left">
-        <h1>Speedreading mit <span class="grad">ORP</span> – stabiler Fokus.</h1>
-        <p class="lead">
-          Füge deinen Text ein, stelle die Geschwindigkeit ein und lies Wort für Wort (RSVP).
-          Der ORP-Buchstabe bleibt an derselben Stelle, damit die Augen nicht springen.
+        <div class="kicker">Speedreading</div>
+
+        <h1 class="hero-title">
+          ORP-Speedreader<br>
+          <span class="grad">stabil. schnell. fokussiert.</span>
+        </h1>
+
+        <p class="lead hero-lead">
+          Text einfügen, WPM einstellen und Wort für Wort lesen (RSVP).
+          Der ORP-Buchstabe bleibt an einer festen Position – ohne ständiges Springen der Augen.
         </p>
 
-        <div class="hero-actions">
-          <a class="btn primary" href="#tool">Jetzt starten</a>
-          <button class="btn ghost" id="btn-demo" type="button">Demo einfügen</button>
+        <div class="hero-actions hero-actions-modern">
+          <a class="btn primary" href="#tool">Start</a>
+          <button class="btn ghost" id="btn-demo" type="button">Demo</button>
         </div>
 
-        <div class="badges">
-          <span class="badge">100% Client-Side</span>
+        <div class="badges hero-badges">
+          <span class="badge">Lokal im Browser</span>
           <span class="badge">Nur Text</span>
-          <span class="badge">RSVP + ORP</span>
+          <span class="badge">300 WPM Startwert</span>
         </div>
       </div>
 
-      <div class="hero-card">
+      <div class="hero-card hero-card-modern">
         <div class="mini-title">Vorschau</div>
-        <div class="preview">
+
+        <div class="spritz-box hero-spritz" aria-hidden="true">
           <div class="spritz-line">
             <span class="spritz-left">mi</span><span class="spritz-pivot">n</span><span class="spritz-right">ute</span>
           </div>
-          <p class="muted small">300 wpm</p>
+
+          <div class="spritz-hud">
+            <span class="pill small">300 wpm</span>
+            <span class="pill small">ORP</span>
+          </div>
         </div>
+
+        <p class="muted small hero-note">Tipp: Space = Play/Pause (außer im Textfeld)</p>
       </div>
     </section>
 
+    <!-- Tool -->
     <section id="tool" class="panel">
       <div class="panel-head">
         <h2>Tool</h2>
@@ -166,6 +183,7 @@
       </div>
     </section>
 
+    <!-- FAQ -->
     <section id="faq" class="panel">
       <div class="panel-head">
         <h2>FAQ</h2>
@@ -189,6 +207,7 @@
       </div>
     </section>
 
+    <!-- Privacy -->
     <section id="privacy" class="panel">
       <div class="panel-head">
         <h2>Datenschutz</h2>
@@ -201,10 +220,10 @@
     </section>
 
     <footer class="footer">
-      <div class="muted small">© <span id="year"></span> · 4rjn.github.io/bionicr</div>
+      <div class="muted small">© <span id="year"></span> · 4rjn.github.io/bionicreading</div>
     </footer>
   </main>
 
-  <script src="./assets/app.js?v=20260118-1"></script>
+  <script src="./assets/app.js?v=20260118-3"></script>
 </body>
 </html>
